# minvm

./: CMakeLists.txt  LICENSE  README.md  main.cpp
asm1/: asm1.cpp  asm1.hh
compiler/: assemble.py  opcode_gen.py  opcodes.py
core/: CMakeLists.txt  heap.hh  opcodes.hh  regs.cpp  regs.hh  vm.cpp  vm.hh
examples/: bench.asm  info_heap.asm  jump_forward.asm  load_mem.asm  loop.asm  loop_simple.asm  noexit.asm  sqrt.asm
impl/: CMakeLists.txt  heap.cpp  heap.hh  ints.cpp  ints.hh  jump.cpp  jump.hh  mov.cpp  mov.hh  nopstop.cpp  nopstop.hh  opcodes.hh  random.cpp  random.hh  strs.cpp  strs.hh
test/: CMakeLists.txt  framework.cpp  framework.hh  heap.cpp  ints.cpp  jump.cpp  mov.cpp  random.cpp  regs.cpp  runner.cpp  strs.cpp  vm.cpp
test/outputs/: info_heap.out  jump_forward.out  load_mem.out  noexit.out
